--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 .page-body {
     background: var(--gradient-body);
     height: 100vh;
-    background-image: url('../img/Pattern.png');
+    background-image: url('img/Pattern.png');
     font-family: 'Exo 2', sans-serif;
 }
 
@@ -92,7 +92,7 @@
 .card__img {
     display: flex;
     flex-direction: row-reverse;
-    background-image: url("../img/Photo.png");
+    background-image: url("img/Photo.png");
     width: 100%;
     height: 250px;
     background-repeat: no-repeat;
